ci: make build-and-publish work across loaders

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -78,7 +78,7 @@ jobs:
 
       # Fix #7: Build specific subprojects explicitly with version override
       - name: Build with Gradle
-        run: ./gradlew clean :fabric:build :neoforge:build -Pversion=${{ steps.get_version.outputs.version }}
+        run: ./gradlew clean build -Pversion=${{ steps.get_version.outputs.version }}
 
       - name: Get Minecraft version
         id: get_mc_version
@@ -105,28 +105,62 @@ jobs:
         id: find_jars
         run: |
           VERSION="${{ steps.get_version.outputs.version }}"
-          # Fix #7: More strict matching with explicit sorting
-          FABRIC_JAR=$(find fabric/build/libs -name "*-${VERSION}.jar" ! -name "*-sources.jar" ! -name "*-javadoc.jar" ! -name "*-dev.jar" -type f | sort | head -1)
-          NEOFORGE_JAR=$(find neoforge/build/libs -name "*-${VERSION}.jar" ! -name "*-sources.jar" ! -name "*-javadoc.jar" ! -name "*-dev.jar" -type f | sort | head -1)
+          MC_VERSION="${{ steps.get_mc_version.outputs.mc_version }}"
 
-          if [ -z "$FABRIC_JAR" ]; then
-            echo "Error: Fabric JAR not found for version ${VERSION}"
-            echo "Available JARs in fabric/build/libs:"
-            ls -la fabric/build/libs/ || echo "Directory not found"
+          # Find loader jars if the corresponding subproject exists.
+          FABRIC_JAR=""
+          NEOFORGE_JAR=""
+          FORGE_JAR=""
+
+          if [ -d "fabric/build/libs" ]; then
+            FABRIC_JAR=$(find fabric/build/libs -name "*-${VERSION}.jar" \
+              ! -name "*-sources.jar" ! -name "*-javadoc.jar" ! -name "*-dev.jar" -type f | sort | head -1)
+          fi
+          if [ -d "neoforge/build/libs" ]; then
+            NEOFORGE_JAR=$(find neoforge/build/libs -name "*-${VERSION}.jar" \
+              ! -name "*-sources.jar" ! -name "*-javadoc.jar" ! -name "*-dev.jar" -type f | sort | head -1)
+          fi
+          if [ -d "forge/build/libs" ]; then
+            FORGE_JAR=$(find forge/build/libs -name "*-${VERSION}.jar" \
+              ! -name "*-sources.jar" ! -name "*-javadoc.jar" ! -name "*-dev.jar" -type f | sort | head -1)
+          fi
+
+          if [ -z "$FABRIC_JAR" ] && [ -z "$NEOFORGE_JAR" ] && [ -z "$FORGE_JAR" ]; then
+            echo "Error: No loader JARs found for version ${VERSION}"
+            echo "fabric/build/libs:"; ls -la fabric/build/libs/ || true
+            echo "neoforge/build/libs:"; ls -la neoforge/build/libs/ || true
+            echo "forge/build/libs:"; ls -la forge/build/libs/ || true
             exit 1
           fi
-          if [ -z "$NEOFORGE_JAR" ]; then
-            echo "Error: NeoForge JAR not found for version ${VERSION}"
-            echo "Available JARs in neoforge/build/libs:"
-            ls -la neoforge/build/libs/ || echo "Directory not found"
-            exit 1
+
+          # CurseForge can reject uploads if multiple files share the same filename.
+          # Copy into dist/ with explicit, unique filenames so uploads are always distinct.
+          mkdir -p dist
+
+          FABRIC_OUT=""
+          NEOFORGE_OUT=""
+          FORGE_OUT=""
+
+          if [ -n "$FABRIC_JAR" ]; then
+            FABRIC_OUT="dist/netherportalcoordinatescale-fabric-${MC_VERSION}-${VERSION}.jar"
+            cp "$FABRIC_JAR" "$FABRIC_OUT"
+          fi
+          if [ -n "$NEOFORGE_JAR" ]; then
+            NEOFORGE_OUT="dist/netherportalcoordinatescale-neoforge-${MC_VERSION}-${VERSION}.jar"
+            cp "$NEOFORGE_JAR" "$NEOFORGE_OUT"
+          fi
+          if [ -n "$FORGE_JAR" ]; then
+            FORGE_OUT="dist/netherportalcoordinatescale-forge-${MC_VERSION}-${VERSION}.jar"
+            cp "$FORGE_JAR" "$FORGE_OUT"
           fi
 
-          echo "fabric_jar=$FABRIC_JAR" >> $GITHUB_OUTPUT
-          echo "neoforge_jar=$NEOFORGE_JAR" >> $GITHUB_OUTPUT
+          echo "fabric_jar=$FABRIC_OUT" >> $GITHUB_OUTPUT
+          echo "neoforge_jar=$NEOFORGE_OUT" >> $GITHUB_OUTPUT
+          echo "forge_jar=$FORGE_OUT" >> $GITHUB_OUTPUT
 
-          echo "Fabric JAR: $FABRIC_JAR"
-          echo "NeoForge JAR: $NEOFORGE_JAR"
+          echo "Fabric JAR (upload): $FABRIC_OUT"
+          echo "NeoForge JAR (upload): $NEOFORGE_OUT"
+          echo "Forge JAR (upload): $FORGE_OUT"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -135,11 +169,12 @@ jobs:
           path: |
             ${{ steps.find_jars.outputs.fabric_jar }}
             ${{ steps.find_jars.outputs.neoforge_jar }}
+            ${{ steps.find_jars.outputs.forge_jar }}
 
       # Fix #1: Use job-level env, condition now works
       # Fix #4: Properly handle changelog with file and validate game version
       - name: Publish to CurseForge (Fabric)
-        if: env.CURSEFORGE_TOKEN != '' && env.CURSEFORGE_PROJECT_ID != ''
+        if: env.CURSEFORGE_TOKEN != '' && env.CURSEFORGE_PROJECT_ID != '' && steps.find_jars.outputs.fabric_jar != ''
         run: |
           # Get CurseForge game version IDs
           MC_ID=$(curl -s -H "X-Api-Token: $CURSEFORGE_TOKEN" \
@@ -166,7 +201,7 @@ jobs:
           # Build metadata JSON safely using jq with both IDs
           jq -n \
             --rawfile changelog changelog.txt \
-            --arg displayName "Nether Portal Coordinate Scale ${{ steps.get_version.outputs.version }} (Fabric)" \
+            --arg displayName "Nether Portal Coordinate Scale ${{ steps.get_version.outputs.version }} for ${{ steps.get_mc_version.outputs.mc_version }} (Fabric)" \
             --argjson gameVersions "[$MC_ID, $FABRIC_ID]" \
             '{
               changelog: $changelog,
@@ -182,7 +217,7 @@ jobs:
             -F "file=@${{ steps.find_jars.outputs.fabric_jar }}"
 
       - name: Publish to CurseForge (NeoForge)
-        if: env.CURSEFORGE_TOKEN != '' && env.CURSEFORGE_PROJECT_ID != ''
+        if: env.CURSEFORGE_TOKEN != '' && env.CURSEFORGE_PROJECT_ID != '' && steps.find_jars.outputs.neoforge_jar != ''
         run: |
           # Get CurseForge game version IDs
           MC_ID=$(curl -s -H "X-Api-Token: $CURSEFORGE_TOKEN" \
@@ -209,7 +244,7 @@ jobs:
           # Build metadata JSON safely using jq with both IDs
           jq -n \
             --rawfile changelog changelog.txt \
-            --arg displayName "Nether Portal Coordinate Scale ${{ steps.get_version.outputs.version }} (NeoForge)" \
+            --arg displayName "Nether Portal Coordinate Scale ${{ steps.get_version.outputs.version }} for ${{ steps.get_mc_version.outputs.mc_version }} (NeoForge)" \
             --argjson gameVersions "[$MC_ID, $NEOFORGE_ID]" \
             '{
               changelog: $changelog,
@@ -224,22 +259,64 @@ jobs:
             -F "metadata=<cf_metadata.json" \
             -F "file=@${{ steps.find_jars.outputs.neoforge_jar }}"
 
+      - name: Publish to CurseForge (Forge)
+        if: env.CURSEFORGE_TOKEN != '' && env.CURSEFORGE_PROJECT_ID != '' && steps.find_jars.outputs.forge_jar != ''
+        run: |
+          # Get CurseForge game version IDs
+          MC_ID=$(curl -s -H "X-Api-Token: $CURSEFORGE_TOKEN" \
+            "https://minecraft.curseforge.com/api/game/versions" \
+            | jq -r --arg v "${{ steps.get_mc_version.outputs.mc_version }}" '.[] | select(.name==$v) | .id' | head -1)
+
+          FORGE_ID=$(curl -s -H "X-Api-Token: $CURSEFORGE_TOKEN" \
+            "https://minecraft.curseforge.com/api/game/versions" \
+            | jq -r '.[] | select(.slug=="forge" or .name=="Forge") | .id' | head -1)
+
+          if [ -z "$MC_ID" ] || [ "$MC_ID" = "null" ]; then
+            echo "Error: No CurseForge game version ID found for ${{ steps.get_mc_version.outputs.mc_version }}"
+            exit 1
+          fi
+
+          if [ -z "$FORGE_ID" ] || [ "$FORGE_ID" = "null" ]; then
+            echo "Error: No CurseForge Forge loader ID found"
+            exit 1
+          fi
+
+          echo "Found MC version ID: $MC_ID"
+          echo "Found Forge loader ID: $FORGE_ID"
+
+          jq -n \
+            --rawfile changelog changelog.txt \
+            --arg displayName "Nether Portal Coordinate Scale ${{ steps.get_version.outputs.version }} for ${{ steps.get_mc_version.outputs.mc_version }} (Forge)" \
+            --argjson gameVersions "[$MC_ID, $FORGE_ID]" \
+            '{
+              changelog: $changelog,
+              changelogType: "markdown",
+              displayName: $displayName,
+              gameVersions: $gameVersions,
+              releaseType: "release"
+            }' > cf_metadata.json
+
+          curl -X POST "https://minecraft.curseforge.com/api/projects/$CURSEFORGE_PROJECT_ID/upload-file" \
+            -H "X-Api-Token: $CURSEFORGE_TOKEN" \
+            -F "metadata=<cf_metadata.json" \
+            -F "file=@${{ steps.find_jars.outputs.forge_jar }}"
+
       # Fix #1: Use job-level env, condition now works
       # Fix #2: Remove Content-Type header, let curl handle multipart boundary
       # Fix #3: Build JSON with jq to properly escape changelog
       - name: Publish to Modrinth (Fabric)
-        if: env.MODRINTH_TOKEN != '' && env.MODRINTH_PROJECT_ID != ''
+        if: env.MODRINTH_TOKEN != '' && env.MODRINTH_PROJECT_ID != '' && steps.find_jars.outputs.fabric_jar != ''
         run: |
           # Build JSON payload safely with jq to handle special characters
           jq -n \
             --rawfile changelog changelog.txt \
-            --arg name "Nether Portal Coordinate Scale ${{ steps.get_version.outputs.version }} (Fabric)" \
+            --arg name "Nether Portal Coordinate Scale ${{ steps.get_version.outputs.version }} for ${{ steps.get_mc_version.outputs.mc_version }} (Fabric)" \
             --arg ver "${{ steps.get_version.outputs.version }}" \
             --arg mc "${{ steps.get_mc_version.outputs.mc_version }}" \
             --arg pid "$MODRINTH_PROJECT_ID" \
             '{
               name: $name,
-              version_number: ($ver + "-fabric"),
+              version_number: ($ver + "-" + $mc + "-fabric"),
               changelog: $changelog,
               dependencies: [],
               game_versions: [$mc],
@@ -262,18 +339,18 @@ jobs:
           rm -f payload.json
 
       - name: Publish to Modrinth (NeoForge)
-        if: env.MODRINTH_TOKEN != '' && env.MODRINTH_PROJECT_ID != ''
+        if: env.MODRINTH_TOKEN != '' && env.MODRINTH_PROJECT_ID != '' && steps.find_jars.outputs.neoforge_jar != ''
         run: |
           # Build JSON payload safely with jq to handle special characters
           jq -n \
             --rawfile changelog changelog.txt \
-            --arg name "Nether Portal Coordinate Scale ${{ steps.get_version.outputs.version }} (NeoForge)" \
+            --arg name "Nether Portal Coordinate Scale ${{ steps.get_version.outputs.version }} for ${{ steps.get_mc_version.outputs.mc_version }} (NeoForge)" \
             --arg ver "${{ steps.get_version.outputs.version }}" \
             --arg mc "${{ steps.get_mc_version.outputs.mc_version }}" \
             --arg pid "$MODRINTH_PROJECT_ID" \
             '{
               name: $name,
-              version_number: ($ver + "-neoforge"),
+              version_number: ($ver + "-" + $mc + "-neoforge"),
               changelog: $changelog,
               dependencies: [],
               game_versions: [$mc],
@@ -292,6 +369,38 @@ jobs:
             -H "Authorization: $MODRINTH_TOKEN" \
             -F "data=@payload.json;type=application/json" \
             -F "neoforge=@${{ steps.find_jars.outputs.neoforge_jar }}"
+
+          rm -f payload.json
+
+      - name: Publish to Modrinth (Forge)
+        if: env.MODRINTH_TOKEN != '' && env.MODRINTH_PROJECT_ID != '' && steps.find_jars.outputs.forge_jar != ''
+        run: |
+          jq -n \
+            --rawfile changelog changelog.txt \
+            --arg name "Nether Portal Coordinate Scale ${{ steps.get_version.outputs.version }} for ${{ steps.get_mc_version.outputs.mc_version }} (Forge)" \
+            --arg ver "${{ steps.get_version.outputs.version }}" \
+            --arg mc "${{ steps.get_mc_version.outputs.mc_version }}" \
+            --arg pid "$MODRINTH_PROJECT_ID" \
+            '{
+              name: $name,
+              version_number: ($ver + "-" + $mc + "-forge"),
+              changelog: $changelog,
+              dependencies: [],
+              game_versions: [$mc],
+              version_type: "release",
+              loaders: ["forge"],
+              featured: true,
+              project_id: $pid,
+              file_parts: ["forge"]
+            }' > payload.json
+
+          echo "Forge Payload:"
+          cat payload.json
+
+          curl -X POST "https://api.modrinth.com/v2/version" \
+            -H "Authorization: $MODRINTH_TOKEN" \
+            -F "data=@payload.json;type=application/json" \
+            -F "forge=@${{ steps.find_jars.outputs.forge_jar }}"
 
           rm -f payload.json
 
